--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -40,7 +40,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "851e803c-4a9d-4988-d933-da911f16aae9"
+        "outputId": "59278744-734b-4119-dc36-9ffde230aebf"
       },
       "source": [
         "a=\"Jemuel Roderno\"\n",
@@ -49,7 +49,7 @@
         "d=\"April 9, 2002\"\n",
         "e=\"Guyam Malaki, Indang, Cavite\"\n",
         "f=\"BSECE 2-3\"\n",
-        "g=\"1.42\"\n",
+        "g=\"1.76\"\n",
         "\n",
         "print(\"Full name: \" +a) \n",
         "print(\"Student Number: \" +b)\n",
@@ -59,7 +59,7 @@
         "print(\"Course: \" +f)\n",
         "print(\"Last Sem GWA: \" +g)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
             "Birthday: April 9, 2002\n",
             "Address: Guyam Malaki, Indang, Cavite\n",
             "Course: BSECE 2-3\n",
-            "Last Sem GWA: 1.78\n"
+            "Last Sem GWA: 1.76\n"
           ]
         }
       ]
@@ -92,7 +92,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2c4582e1-a871-48fc-a578-03774c0979ef"
+        "outputId": "17990dc4-7821-4ce3-c8ab-59e2382f1a14"
       },
       "source": [
         "answ=\"Y\"\n",
@@ -107,9 +107,9 @@
         "print(bool(not(answ==\"y\")))\n",
         "print(bool(((2<n)&(n==5+1))|(answ==\"No\")))\n",
         "print(bool(((n==2)&(n==7))|(answ==\"Y\")))\n",
-        "print(bool((n==2)&(n==7)|(answ==\"Y\")))"
+        "print(bool((n==2)&((n==7)|(answ==\"Y\"))))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
             "True\n",
             "False\n",
             "True\n",
-            "True\n"
+            "False\n"
           ]
         }
       ]
