--- a/Control_Structure.ipynb
+++ b/Control_Structure.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of Control Structure",
+      "name": "Control Structure",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -371,7 +371,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bt9_rLuw8Ve7"
+        "id": "bt9_rLuw8Ve7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3e0ba4e6-2e3a-4fca-b6c4-0f89cebe3a37"
       },
       "source": [
         "number=int(input(\"Enter your number \"))\n",
@@ -382,8 +386,17 @@
         "if number<0:\n",
         " print(\"Your number is Negative\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your number 5\n",
+            "Your number is Positive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -401,7 +414,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e4b32edf-9833-4146-d5ff-dc26f95365ad"
+        "outputId": "41093575-f72c-4890-8afa-2394d5c2151a"
       },
       "source": [
         "#write a python program that determines that the grade are pass remedial or failed\n",
@@ -417,13 +430,14 @@
         "else:\n",
         " print(\"You Failed\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "You Failed\n"
+            "Enter your grade 74.000001\n",
+            "Remedial\n"
           ]
         }
       ]
