--- a/Control_Structure.ipynb
+++ b/Control_Structure.ipynb
@@ -375,25 +375,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8fa732ba-f608-4bf2-de4f-9b6e56649aa5"
+        "outputId": "3e0ba4e6-2e3a-4fca-b6c4-0f89cebe3a37"
       },
       "source": [
-        "number=int(input(\"Enter a number \"))\n",
+        "number=int(input(\"Enter your number \"))\n",
         "if number>0:\n",
-        " print(\"The number is Positive\")\n",
-        "elif number==0:\n",
-        " print(\"The number is Zero\")\n",
-        "elif number<0:\n",
-        " print(\"The number is Negative\")"
+        " print(\"Your number is Positive\")\n",
+        "if number==0:\n",
+        " print(\"Your number is Zero\")\n",
+        "if number<0:\n",
+        " print(\"Your number is Negative\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a number 1\n",
-            "The number is Positive\n"
+            "Enter your number 5\n",
+            "Your number is Positive\n"
           ]
         }
       ]
