--- a/Control_Structure.ipynb
+++ b/Control_Structure.ipynb
@@ -375,25 +375,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e0ba4e6-2e3a-4fca-b6c4-0f89cebe3a37"
+        "outputId": "9dc2f38a-067d-404e-e6de-293c1aa234c2"
       },
       "source": [
-        "number=int(input(\"Enter your number \"))\n",
+        "number=int(input(\"Enter a number \"))\n",
         "if number>0:\n",
-        " print(\"Your number is Positive\")\n",
+        " print(\"The number is Positive\")\n",
         "if number==0:\n",
-        " print(\"Your number is Zero\")\n",
+        " print(\"The number is Zero\")\n",
         "if number<0:\n",
-        " print(\"Your number is Negative\")"
+        " print(\"The number is Negative\")"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your number 5\n",
-            "Your number is Positive\n"
+            "Enter a number 0\n",
+            "The number is Zero\n"
           ]
         }
       ]
