--- a/Control_Structure.ipynb
+++ b/Control_Structure.ipynb
@@ -375,18 +375,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9dc2f38a-067d-404e-e6de-293c1aa234c2"
+        "outputId": "645a53db-bb09-489f-818b-2bd89a908bc2"
       },
       "source": [
         "number=int(input(\"Enter a number \"))\n",
         "if number>0:\n",
         " print(\"The number is Positive\")\n",
-        "if number==0:\n",
+        "elif number==0:\n",
         " print(\"The number is Zero\")\n",
-        "if number<0:\n",
+        "elif number<0:\n",
         " print(\"The number is Negative\")"
       ],
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
