--- a/Final_Exam.ipynb
+++ b/Final_Exam.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Final Exam.ipynb",
+      "name": "Copy of Final Exam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMf1iAu5xlgKB3vJoV8aV78",
+      "authorship_tag": "ABX9TyPJi542oAbZD5BLzl6qy/A2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,17 +39,16 @@
     {
       "cell_type": "code",
       "source": [
-        "number=[1, 2.87, 3, 4.9999, 5.3, 6, 1, 2, 3, 4.6]\n",
+        "sum=0\n",
+        "number=[1, 2.87, 3, 4.99, 5.3, 6, 1, 2, 3, 4.6]\n",
         "for x in number:\n",
         " if x<5:\n",
-        "  no=sum(number)\n",
-        "  print(\"Sum of numbers less than 5 is\",no)\n",
-        "  if no==no:\n",
-        "   break"
+        "  sum+=x\n",
+        "  print(sum)"
       ],
       "metadata": {
         "id": "iM1gVC-HmWgv",
-        "outputId": "1c34a53a-9f53-4c26-a60f-41d8d8fdaa3b",
+        "outputId": "dd4c1668-0e19-425a-88aa-a3465e20dec3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -60,7 +59,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sum of numbers less than 5 is 33.7699\n"
+            "1\n",
+            "3.87\n",
+            "6.87\n",
+            "11.86\n",
+            "12.86\n",
+            "14.86\n",
+            "17.86\n",
+            "22.46\n"
           ]
         }
       ]
@@ -85,7 +91,7 @@
         "if num1>0:\n",
         " while num5>0:\n",
         "  num=num1+num5\n",
-        "  print(\"Sum of 1st and last number is\",num)\n",
+        "  print(\"Sum of 1st and 5th number is\",num)\n",
         "  if num==num:\n",
         "   break"
       ],
@@ -129,13 +135,13 @@
         "if grades>=90:\n",
         " print(x,\"A\")\n",
         "else:\n",
-        "  if grades>80 and grades<90:\n",
+        "  if grades>=80 and grades<90:\n",
         "   print(x,\"B\")\n",
         "  else:\n",
-        "   if grades>70 and grades<80:\n",
+        "   if grades>=70 and grades<80:\n",
         "    print(x,\"C\")\n",
         "   else:\n",
-        "    if grades>60 and grades<70:\n",
+        "    if grades>=60 and grades<70:\n",
         "     print(x,\"D\")\n",
         "    else:\n",
         "     print(x,\"F\")"
@@ -145,15 +151,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A4VezmAIy-o1",
-        "outputId": "c7e619e2-7fd1-48a5-96f3-74e45ca8bd94"
+        "outputId": "8e90549e-3a4c-4270-ee39-63d04ce9348f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your grades 95\n",
+            "Enter your grades 90\n",
             "Your grade is A\n"
           ]
         }
